Some work on intro

--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -83,7 +83,7 @@ It now remains to determine what is the typical frequency of collisions in a giv
 Consider an semi-infinite plasma existing for $x>0$, with electron density $n_e$ and ion density $n_e/Z$ with charge state $Z$\footnote{This description has direct relevance to the Zero Vector Potential mechanism which will be made clear later.}. Suppose the electron fluid is displaced into the plasma bulk a distance $\Delta r$ as in figure \ref{fig:introplasmafrequency}. 
 \begin{figure}
 	\centering
-	\includegraphics[width=0.7\linewidth]{../diagrams/intro_plasma_frequency}
+	\includegraphics[width=0.7\linewidth]{figures/intro/intro_plasma_frequency}
 	\caption{Diagram to illustrate the plasma frequency derivation.}
 	\label{fig:introplasmafrequency}
 \end{figure}
